<resources>
    <string name="app_name">UMCS Leds</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="live_mode">Live mode</string>
    <string name="sync_pref_summery">Control LED with your screen in real time</string>

    <string name="pref_gameLevel">Games level</string>
    <string name="pref_gameLevel_dialog_title">Change your games level</string>
    <string name="pref_gameLevel_default_value">Level3</string>
    <string name="pref_gameLevel_summary">Level 3</string>

    <string-array name="pref_gameLevel_entreies">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
    </string-array>

    <string-array name="pref_gameLevel_values">
        <item>level1</item>
        <item>level2</item>
        <item>level3</item>
        <item>level4</item>
    </string-array>

    <string name="pref_udpIpAddress">Server UDP Ip Address</string>
    <string name="pref_udpIpAddress_default_value">localhost</string>

    <string name="pref_udpPort">Server UDP Port</string>
    <string name="pref_udpPort_default_value">12345</string>

    <string name="pref_udpKey">Server UDP Key</string>
    <string name="pref_udpKey_default_value">0000</string>

</resources>
