<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:id="@+id/isLiveMode"
        android:key="pref_isLiveMode"
        android:title="@string/live_mode"
        android:summary="@string/sync_pref_summery"
        android:defaultValue="false"/>

    <ListPreference
        android:key="pref_gameLevel"
        android:title="@string/pref_gameLevel"
        android:entries="@array/pref_gameLevel_entreies"
        android:entryValues="@array/pref_gameLevel_values"
        android:defaultValue="@string/pref_gameLevel_default_value"
        android:summary="@string/pref_gameLevel"/>

    <EditTextPreference
        android:key="pref_udpIpAddress"
        android:title="@string/pref_udpIpAddress"
        android:defaultValue="@string/pref_udpIpAddress_default_value"
        android:summary="@string/pref_udpIpAddress"/>

    <EditTextPreference
        android:key="pref_udpPort"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:title="@string/pref_udpPort"
        android:defaultValue="@string/pref_udpPort_default_value"
        android:summary="@string/pref_udpPort"/>

    <EditTextPreference
        android:key="pref_udpKey"
        android:title="@string/pref_udpKey"
        android:defaultValue="@string/pref_udpKey_default_value"
        android:summary="@string/pref_udpKey"/>

</PreferenceScreen>